--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,12 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
+  username: ecommerce-on-rails
+  password: 12345
 
 development:
   <<: *default
-  database: e-commerce-on-rails_development
+  database: ecommerce-on-rails_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: e-commerce-on-rails_test
+  database: ecommerce-on-rails_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: e-commerce-on-rails_production
-  username: e-commerce-on-rails
-  password: <%= ENV['E-COMMERCE-ON-RAILS_DATABASE_PASSWORD'] %>
+  database: ecommerce-on-rails_production
+  username: ecommerce-on-rails
+  password: <%= ENV['ECOMMERCE-ON-RAILS_DATABASE_PASSWORD'] %>
