--- a/config/database.yml
+++ b/config/database.yml
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: ecommerce-on-rails_production
-  username: ecommerce-on-rails
-  password: <%= ENV['ECOMMERCE-ON-RAILS_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+  # username: ecommerce-on-rails
+  # password: <%= ENV['ECOMMERCE-ON-RAILS_DATABASE_PASSWORD'] %>
